Fix margins on mobile images

--- a/app/assets/stylesheets/images/image-gallery.scss
+++ b/app/assets/stylesheets/images/image-gallery.scss
@@ -77,6 +77,10 @@
       object-fit: cover;
       object-position: 50% 0%;
       width: auto;
+
+      @media #{$mobile} {
+        width: 100%;
+      }
     }
   }
 
